--- a/part3/3_2/ex_3_2.md
+++ b/part3/3_2/ex_3_2.md
@@ -1,6 +1,5 @@
-### build script
-The script fetches a project from GitHub, uses its Dockerfile to build an image and pushes it to DockerHub (these happen within a container).
-It takes a GitHub repository and a DockerHub image name as arguments and before pushing to DockerHub it also prompts for DockerHub username and password.
+### Build script
+ `script.sh` fetches a project from GitHub, uses its Dockerfile to build an image and pushes it to DockerHub. The script is run within a container that uses host's Docker engine for everything Docker-related. It takes a GitHub repository and a DockerHub image name as arguments and before pushing to DockerHub it also prompts for DockerHub username and password.
 
 ### Usage
 `docker-compose run app <GitHub username>/<repo name> <DockerHub username>/<repo name>`
